--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mongoose": "^8.0.3",
     "socket.io": "^4.7.3"
   }
